[package]
name = "art-olc"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-epoch = "0.8.2"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.2"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = "0.3.2"

[[bench]]
name = "insert"
harness = false